adding the latest

--- a/BallOnPlateControl.html
+++ b/BallOnPlateControl.html
@@ -8,16 +8,7 @@
 <title>Ball on Plate Control  </title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="index.html">Info</a></div>
-<div class="menu-item"><a href="ac.html">Academic</a></div>
-<div class="menu-category"><br /></div>
-<div class="menu-item"><a href="Help.html">Time&nbsp;to&nbsp;help!</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>Ball on Plate Control  </h1>
 </div>
@@ -50,16 +41,15 @@
 <table class="imgtable"><tr><td>
 <img src="files/2011_LinearControl/trajectory_start2.png" alt="" />&nbsp;</td>
 <td align="left"></td></tr></table>
-<p style="text-align: left;"><object classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" height="408" width="408"><param name="url" value="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz006.wmv"><param name="url" value="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz006.wmv"><embed type="application/x-mplayer2" src="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz006.wmv" url="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz006.wmv" height="550" width="550"></object></p>
-<p style="text-align: left;"><object classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" height="415" width="415"><param name="url" value="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz007.wmv"><param name="url" value="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz007.wmv"><embed type="application/x-mplayer2" src="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz007.wmv" url="http://www.khashabi.myproxima.ir/2011_LinearControl/CaptureWiz007.wmv" height="550" width="550"></object></p>
+<p style="text-align: left;"><object classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" height="408" width="408"><param name="url" value="files/2011_LinearControl/CaptureWiz006.wmv"><param name="url" value="files/2011_LinearControl/CaptureWiz006.wmv"><embed type="application/x-mplayer2" src="files/2011_LinearControl/CaptureWiz006.wmv" url="files/2011_LinearControl/CaptureWiz006.wmv" height="550" width="550"></object></p>
+<p style="text-align: left;"><object classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" height="415" width="415"><param name="url" value="files/2011_LinearControl/CaptureWiz007.wmv"><param name="url" value="files/2011_LinearControl/CaptureWiz007.wmv"><embed type="application/x-mplayer2" src="files/2011_LinearControl/CaptureWiz007.wmv" url="files/2011_LinearControl/CaptureWiz007.wmv" height="550" width="550"></object></p>
 
-			</div><div id="footer">
+                        </div>
+<div id="footer">
 <div id="footer-text">
-Page generated 2016-10-15 12:03:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-06-19 13:38:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
