--- a/GACombinatorial.html
+++ b/GACombinatorial.html
@@ -8,17 +8,7 @@
 <title>Design and Optimizing Digital Combinational Circuits  </title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="index.html">Info</a></div>
-<div class="menu-item"><a href="ac.html" class="current">Academic</a></div>
-<div class="menu-item"><a href="personal.html">Personal</a></div>
-<div class="menu-category"><br /></div>
-<div class="menu-item"><a href="Help.html">Time&nbsp;to&nbsp;help!</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>Design and Optimizing Digital Combinational Circuits  </h1>
 </div>
@@ -52,15 +42,11 @@
 
 </li>
 </ul>
-<p style="text-align: left;"><object style="width: 600px; height: 403px;" classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" class="mceItemMedia mceItemWindowsMedia" height="403" width="600"><param name="url" value="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates.wmv"><param name="url" value="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates.wmv"><embed style="width: 600px; height: 403px;" type="application/x-mplayer2" src="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates.wmv" url="http://godpascal.ir/subdomains/khashabi/docs/2010_MinimizingDigitalGates.wmv" class="mceItemMedia mceItemWindowsMedia" height="403" width="600"></object></p>
-<p style="text-align: left;"><object style="width: 600px; height: 403px;" classid="clsid:6bf52a52-394a-11d3-b153-00c04f79faa6" codebase="http://activex.microsoft.com/activex/controls/mplayer/en/nsmp2inf.cab#Version=5,1,52,701" class="mceItemMedia mceItemWindowsMedia" height="403" width="600"><param name="url" value="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates2.wmv"><param name="url" value="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates2.wmv"><embed style="width: 600px; height: 403px;" type="application/x-mplayer2" src="http://web.engr.illinois.edu/~khashab2/files/2010_GeneticCombinationalCircuits/2010_MinimizingDigitalGates2.wmv url="http://godpascal.ir/subdomains/khashabi/docs/2010_MinimizingDigitalGates2.wmv" class="mceItemMedia mceItemWindowsMedia" height="403" width="600"></object></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2014-07-23 23:41:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-06-19 13:39:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
