--- a/demosaicing.html
+++ b/demosaicing.html
@@ -8,17 +8,7 @@
 <title>List of online demosaicing codes and binaries </title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="index.html">Info</a></div>
-<div class="menu-item"><a href="acc.html" class="current">Accademic</a></div>
-<div class="menu-item"><a href="personal.html">Personal</a></div>
-<div class="menu-category"></div>
-<div class="menu-item"><a href="Help.html">Time&nbsp;to&nbsp;help!</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>List of online demosaicing codes and binaries </h1>
 </div>
@@ -171,11 +161,9 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2013-07-16 13:03:07 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-06-19 13:38:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
