--- a/QSmith.html
+++ b/QSmith.html
@@ -8,17 +8,7 @@
 <title>QSmith  </title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="index.html">Info</a></div>
-<div class="menu-item"><a href="ac.html">Academic</a></div>
-<div class="menu-item"><a href="personal.html">Personal</a></div>
-<div class="menu-category"></div>
-<div class="menu-item"><a href="Help.html">Time&nbsp;to&nbsp;help!</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>QSmith  </h1>
 </div>
@@ -44,11 +34,9 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2014-01-29 22:54:20 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-06-19 13:46:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
