--- a/fuzzyAStarMotion.html
+++ b/fuzzyAStarMotion.html
@@ -8,17 +8,7 @@
 <title>Hybrid Fuzzy-A* for mobile robots:</title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="index.html">Info</a></div>
-<div class="menu-item"><a href="ac.html" class="current">Academic</a></div>
-<div class="menu-item"><a href="personal.html">Personal</a></div>
-<div class="menu-category"><br /></div>
-<div class="menu-item"><a href="Help.html">Time&nbsp;to&nbsp;help!</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>Hybrid Fuzzy-A* for mobile robots:</h1>
 </div>
@@ -56,11 +46,9 @@ In each of the above MATLAB projects run 'test.m&rsquo;. </p>
 
 			</div><div id="footer">
 <div id="footer-text">
-Page generated 2014-10-27 02:23:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-06-19 13:39:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
