--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <table class="imgtable"><tr><td>
 <img src="profile.png" alt="alt text" width="300px" />&nbsp;</td>
 <td align="left"><p>Daniel Khashabi (<span lang="ko" xml:lang="ko">دانیال خشابی</span>) <br />
-Post-doctoral fellow <br />
-Computer and Information Science  <br />
-University of Pennsylvania <br /></p>
+Young Investigator <br />
+Allen Institute for Artificial Intelligence  <br />
+2157 N Northlake Way Suite 110, Seattle, WA 98103 <br /></p>
 <p><br /></p>
 <ul>
-<li><p><b>E-mail:</b> danielkh  ¯\_(ツ)_/¯ cis.upenn.edu
+<li><p><b>E-mail:</b> danielk  ¯\_(ツ)_/¯  allenai.org
 </p>
 </li>
 <li><p><a href="CV_daniel.pdf">[Resume]</a> </p>
@@ -47,12 +47,19 @@ University of Pennsylvania <br /></p>
 </ul>
 </td></tr></table>
 <h2>About</h2>
-<p>I am thrilled to have Prof. Dan Roth as my advisor. I was greatly fortunate to work with Prof. Hamid Sheikhzadeh as my undergraduate advisor.  <br /></p>
-<p>I do research on theoretical and empirical analysis of information, for learning, inference and decision making. More specifically, I focus on <i>Artificial Intelligence, in the context of natural languages</i>. </p>
+<p>I am thrilled to be working at <a href="https://allenai.org">AllenAI</a>. I do research on theoretical and empirical analysis of information, for learning, inference and decision making. More specifically, I focus on <i>Artificial Intelligence, in the context of natural languages</i>.  </p>
+<p>I was greatly fortunate to work with Prof. Dan Roth as my PhD advisor, and have Prof. Hamid Sheikhzadeh as my undergraduate advisor.  <br /></p>
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br />
 ★ shows equal contribution! <br /> </p>
 <h4></h4>
+<ul>
+<li><p><b>“Going on a vacation” takes longer than “Going for a walk”: A Study of Temporal Commonsense Understanding</b> <br /> 
+Ben Zhou, Daniel Khashabi, Qiang Ning and Dan Roth <br /> 
+EMNLP, 2019 <br /> 
+<a href="files/2019_mctaco/2019_mctaco.pdf">Paper</a> <br /></p>
+</li>
+</ul>
 <ul>
 <li><p><b>PerspectroScope: A Window to the World of Diverse Perspectives</b> <br /> 
 Sihao Chen, Daniel Khashabi, Chris Callison-Burch, and Dan Roth <br /> 
@@ -64,7 +71,7 @@ ACL - Demos, 2019 <br />
 <li><p><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims</b> <br /> 
 Sihao Chen, Daniel Khashabi, Wenpeng Yin, Chris Callison-Burch, and Dan Roth <br /> 
 NAACL, 2019 <br /> 
-<a href="files/2019_perspectrum/2019_perspectrum_naacl.pdf">Paper</a>, <a href="https://cogcomp.org/perspectrum">Dataset</a>, <a href="https://github.com/CogComp/perspectrum">Code</a>, <a href="files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">Poster</a> <br /></p>
+<a href="files/2019_perspectrum/2019_perspectrum_naacl.pdf">Paper</a>, <a href="https://cogcomp.org/perspectrum">Dataset</a>, <a href="https://github.com/CogComp/perspectrum">Code</a>, <a href="files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">Poster</a>, <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE&amp;feature=youtu.be">Video</a> <br /></p>
 </li>
 </ul>
 <ul>
@@ -225,7 +232,7 @@ PhD Thesis, University of Pennsylvania, 2019 <br />
 <ul>
 <li><p><b>Analysis and Implementation of Bayesian Methods to Model Correlated Information (Multitask Learning)</b> <br /> 
 BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br /> 
-<a href="files/2012_BSC_Thesis_main.pdf">PDF</a> <br /></p>
+<a href="files/2012_BSC_Thesis_main.pdf">PDF</a>, <a href="files/2012_BSCdefense.pdf">Slides</a> <br /></p>
 </li>
 </ul>
 <p><h2 id="talks">Select Talks</h2></p>
@@ -295,7 +302,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-06-19 15:04:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-08-13 12:54:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
