adding poster for perspectroscope

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ EMNLP, 2019 <br />
 <li><p><b>PerspectroScope: A Window to the World of Diverse Perspectives</b> <br /> 
 Sihao Chen, Daniel Khashabi, Chris Callison-Burch, and Dan Roth <br /> 
 ACL - Demos, 2019 <br /> 
-<a href="files/2019_perspectroscope/2019_perspectroscope_acl_demo.pdf">Paper</a>, <a href="https://www.youtube.com/watch?v=MXBTR1Sp3Bs">Video</a>, <a href="https://github.com/CogComp/perspectroscope">Code</a> <br /></p>
+<a href="files/2019_perspectroscope/2019_perspectroscope_acl_demo.pdf">Paper</a>, <a href="https://www.youtube.com/watch?v=MXBTR1Sp3Bs">Video</a>, <a href="https://github.com/CogComp/perspectroscope">Code</a>, <a href="files/2019_perspectroscope/perspectroscope_poster_072319.pdf">Poster</a> <br /></p>
 </li>
 </ul>
 <ul>
@@ -302,7 +302,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-08-31 00:28:04 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-09-06 13:17:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
