adding aristo paper

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ Allen Institute for Artificial Intelligence  <br />
 ★ shows equal contribution! <br /> </p>
 <h4></h4>
 <ul>
+<li><p><b>From ‘F’ to ‘A’ on the N.Y. Regents Science Exams: An Overview of the Aristo Project</b> <br /> 
+Peter Clark, Oren Etzioni, Daniel Khashabi, Tushar Khot, Bhavana Dalvi Mishra, Kyle Richardson, Ashish Sabharwal, Carissa Schoenick, Oyvind Tafjord, Niket Tandon, Sumithra Bhakthavatsalam, Dirk Groeneveld, Michal Guerquin, Michael Schmitz <br /> 
+arXiv preprint, 2019 <br />
+<a href="https://arxiv.org/abs/1909.01958">Paper</a> </p>
+</li>
+</ul>
+<ul>
 <li><p><b>“Going on a vacation” takes longer than “Going for a walk”: A Study of Temporal Commonsense Understanding</b> <br /> 
 Ben Zhou, Daniel Khashabi, Qiang Ning and Dan Roth <br /> 
 EMNLP, 2019 <br /> 
@@ -302,7 +309,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-12 13:08:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-09-12 20:03:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
