adding holy grail slides

--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 </ul>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
+<li><p><a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/">The Third Workshop on Progress Towards the Holy Grail</a>, <a href="files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">In Pursuit of the Holy Grail of Natural Language Understanding: Past, Present, and Future</a>, 2019.</p>
+</li>
 <li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. </p>
 </li>
 <li><p>New York University, NLP Seminar, <a href="https://docs.google.com/presentation/d/1KZxE0_LANeRYaShGP2cjvbRTaR2V7F8N36xQ8004r2o/edit?usp=sharing">Reasoning-Driven Question Answering</a>, 2018. </p>
@@ -309,7 +311,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-14 09:20:40 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-09-30 14:41:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
