adding the index files

--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@ Allen Institute for Artificial Intelligence  <br />
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&amp;hl=en">[Google Scholar]</a></p>
 </li>
-<li><p><a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281">[Semantic Scholar]</a></p>
-</li>
-<li><p><a href="files/2018_statements/danielk_research_statement.pdf">[Research Statement]</a></p>
-</li>
-<li><p><a href="files/2018_statements/danielk_teaching_statement.pdf">[Teaching Statement]</a></p>
-</li>
-<li><p><a href="files/2018_statements/danielk_diversity_statement.pdf">[Diversity Statement]</a></p>
+<li><p><a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281">[Semantic Scholar]</a>
+
+
+</p>
 </li>
 </ul>
 </td></tr></table>
@@ -308,7 +305,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-11 18:56:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-12-02 09:53:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
