--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Allen Institute for Artificial Intelligence  <br />
 <li><p><b>Not All Claims are Created Equal: Choosing the Right Approach to Assess Your Hypotheses</b> <br /> 
 Erfan Sadeqi Azer, Daniel Khashabi, Ashish Sabharwal and Dan Roth <br /> 
 arXiv preprint, 2019 <br /> 
-<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a></p>
+<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -308,7 +308,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-12-14 12:08:09 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-02-26 15:06:56 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
