--- a/index.html
+++ b/index.html
@@ -59,9 +59,15 @@ Allen Institute for Artificial Intelligence  <br />
 ★ shows equal contribution! <br /> </p>
 <h4></h4>
 <ul>
+<li><p><b>Temporal Common Sense Acquisition with Minimal Supervision</b> <br /> 
+Ben Zhou, Qiang Ning, Daniel Khashabi and Dan Roth <br /> 
+ACL, 2020 <br /> </p>
+</li>
+</ul>
+<ul>
 <li><p><b>Not All Claims are Created Equal: Choosing the Right Approach to Assess Your Hypotheses</b> <br /> 
 Erfan Sadeqi Azer, Daniel Khashabi, Ashish Sabharwal and Dan Roth <br /> 
-arXiv preprint, 2019 <br /> 
+ACL, 2020 <br /> 
 <a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a></p>
 </li>
 </ul>
@@ -308,7 +314,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-26 15:06:56 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-04-04 12:41:47 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
