fix a paper title

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Allen Institute for Artificial Intelligence  <br />
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><b>Dataset Construction via Natural Perturbation Clusters</b> <br /> 
+<li><p><b>Natural Perturbation for Robust Question Answering</b> <br /> 
 with Tushar Khot and Ashish Sabharwal <br /> 
 arXiv, 2020 <br /> 
 <a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a></p>
@@ -327,7 +327,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-12 23:02:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-04-14 01:37:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
