--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@ Allen Institute for Artificial Intelligence  <br />
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Commonsense Knowledge Discovery from Linguistic Graphs</b> <br /> 
+with Hongming Zhang, Yangqiu Song and Dan Roth <br /> 
+IJCAI, 2020 <br /> </p>
+</li>
+</ul>
+<ul>
 <li><p><b>Natural Perturbation for Robust Question Answering</b> <br /> 
 with Tushar Khot and Ashish Sabharwal <br /> 
 arXiv, 2020 <br /> 
@@ -327,7 +333,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-14 01:37:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-04-20 09:40:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
