--- a/index.html
+++ b/index.html
@@ -58,9 +58,17 @@ Allen Institute for Artificial Intelligence  <br />
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
+with Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
+arXiv, 2020 <br /> 
+<a href="files/2020_unifiedqa/unifiedqa.pdf">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Commonsense Knowledge Discovery from Linguistic Graphs</b> <br /> 
 with Hongming Zhang, Yangqiu Song and Dan Roth <br /> 
-IJCAI, 2020 <br /> </p>
+IJCAI, 2020 <br /> 
+<a href="files/2020_transomcs/TransOMCS_ijcai2020.pdf">Paper</a>, <a href="https://github.com/HKUST-KnowComp/TransOMCS">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -80,7 +88,8 @@ arXiv, 2020 <br />
 <ul>
 <li><p><b>Temporal Common Sense Acquisition with Minimal Supervision</b> <br /> 
 with Ben Zhou, Qiang Ning and Dan Roth <br /> 
-ACL, 2020 <br /> </p>
+ACL, 2020 <br /> 
+<a href="files/2020_tacolm/tacolm_acl_2020.pdf">Paper</a>, <a href="https://github.com/CogComp/TacoLM">Code</a></p>
 </li>
 </ul>
 <ul>
@@ -333,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-20 09:40:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-02 10:35:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
