--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ Allen Institute for Artificial Intelligence  <br />
 <li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
 with Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
 arXiv, 2020 <br /> 
-<a href="files/2020_unifiedqa/unifiedqa.pdf">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
+<a href="https://arxiv.org/pdf/2005.00700.pdf">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
 </li>
 </ul>
 <ul>
 <li><p><b>Commonsense Knowledge Discovery from Linguistic Graphs</b> <br /> 
 with Hongming Zhang, Yangqiu Song and Dan Roth <br /> 
 IJCAI, 2020 <br /> 
-<a href="files/2020_transomcs/TransOMCS_ijcai2020.pdf">Paper</a>, <a href="https://github.com/HKUST-KnowComp/TransOMCS">Data</a></p>
+<a href="https://arxiv.org/abs/2005.00206">Paper</a>, <a href="https://github.com/HKUST-KnowComp/TransOMCS">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -128,7 +128,7 @@ NAACL, 2019 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>On the Capabilities and Limitations of Reasoning for Natural Language Understanding</b> <br /> 
+<li><p><b>On the Possibilities and Limitations of Multi-hop Reasoning Under Linguistic Imperfections</b> <br /> 
 with Erfan Sadeqi Azer, Tushar Khot, Ashish Sabharwal and Dan Roth <br /> 
 arXiv, 2019 <br /> 
 <a href="https://arxiv.org/abs/1901.02522">Paper</a> </p>
@@ -342,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-02 10:35:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-05 12:50:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
