--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ ACL, 2020 <br />
 <li><p><b>Not All Claims are Created Equal: Choosing the Right Approach to Assess Your Hypotheses</b> <br /> 
 with Erfan Sadeqi Azer, Ashish Sabharwal and Dan Roth <br /> 
 ACL, 2020 <br /> 
-<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a></p>
+<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a>, <a href="">files<i>2020_hypothesis_assessment</i>hypothesis-assessment-cogcomp-expanded.pdf More slides</a></p>
 </li>
 </ul>
 <ul>
@@ -342,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-05 12:50:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-05-11 12:04:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
