adding acl slides

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Allen Institute for Artificial Intelligence  <br />
 <li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
 with Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
 arXiv, 2020 <br /> 
-<a href="https://arxiv.org/pdf/2005.00700.pdf">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
+<a href="https://arxiv.org/abs/2005.00700">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
 </li>
 </ul>
 <ul>
@@ -89,14 +89,14 @@ arXiv, 2020 <br />
 <li><p><b>Temporal Common Sense Acquisition with Minimal Supervision</b> <br /> 
 with Ben Zhou, Qiang Ning and Dan Roth <br /> 
 ACL, 2020 <br /> 
-<a href="files/2020_tacolm/tacolm_acl_2020.pdf">Paper</a>, <a href="https://github.com/CogComp/TacoLM">Code</a></p>
+<a href="https://arxiv.org/abs/2005.04304">Paper</a>, <a href="https://github.com/CogComp/TacoLM">Code</a>, <a href="files/2020_tacolm/tacllm_acl_slides_split.pdf">ACL slides</a></p>
 </li>
 </ul>
 <ul>
 <li><p><b>Not All Claims are Created Equal: Choosing the Right Approach to Assess Your Hypotheses</b> <br /> 
 with Erfan Sadeqi Azer, Ashish Sabharwal and Dan Roth <br /> 
 ACL, 2020 <br /> 
-<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-cogcomp-expanded.pdf">Slides2</a></p>
+<a href="https://arxiv.org/abs/1911.03850">Paper</a>, <a href="https://github.com/allenai/HyBayes/">Software</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-split.pdf">Slides</a>, <a href="files/2020_hypothesis_assessment/hypothesis-assessment-cogcomp-expanded.pdf">Slides2</a>, <a href="files/2020_hypothesis_assessment/BayesianACL2020_short_ai2_format_split.pdf">ACL slides</a></p>
 </li>
 </ul>
 <ul>
@@ -342,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-05-11 12:11:50 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-17 23:22:47 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
