adding UQA slides

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Allen Institute for Artificial Intelligence  <br />
 <h4></h4>
 <ul>
 <li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
-with Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
+with Sewon Min, Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
 arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2005.00700">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a></p>
+<a href="https://arxiv.org/abs/2005.00700">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a>, <a href="files/2020_unifiedqa/unifiedqa_tau_talk_split.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -342,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-17 23:22:47 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-15 03:38:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
