--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ Allen Institute for Artificial Intelligence  <br />
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
+with Tushar Khot and others <br /> 
+arXiv, 2020 <br /> 
+<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa.apps.allenai.org/">Demo</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
 with Sewon Min, Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
 arXiv, 2020 <br /> 
@@ -339,7 +346,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-23 11:20:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-09-03 11:00:01 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
