--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Allen Institute for Artificial Intelligence  <br />
 <li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
 with Tushar Khot and others <br /> 
 arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa.apps.allenai.org/">Demo</a></p>
+<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa-demo.apps.allenai.org/">Demo</a></p>
 </li>
 </ul>
 <ul>
@@ -346,7 +346,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-03 11:00:01 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-09-03 18:16:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
