--- a/index.html
+++ b/index.html
@@ -62,24 +62,31 @@ arXiv, 2020 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
-with Sewon Min, Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
-arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2005.00700">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a>, <a href="files/2020_unifiedqa/unifiedqa_tau_talk_split.pdf">Slides</a></p>
+<li><p><b><i>UNQOVER</i>ing Stereotypical Biases via Underspecified Questions</b> <br /> 
+with Tao Li and others <br /> 
+EMNLP - Findings, 2020 <br /> 
+<a href="?">Paper</a></p>
 </li>
 </ul>
 <ul>
-<li><p><b>Natural Perturbation for Robust Question Answering</b> <br /> 
-with Tushar Khot and Ashish Sabharwal <br /> 
-arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a></p>
+<li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System</b> <br /> 
+with Sewon Min, Tushar Khot, Ashish Sabharwal, Oyvind Tafjord, Peter Clark, Hannaneh Hajishirzi <br /> 
+EMNLP - Findings, 2020 <br /> 
+<a href="https://arxiv.org/abs/2005.00700">Paper</a>, <a href="https://github.com/allenai/unifiedqa">Resources</a>, <a href="https://unifiedqa.apps.allenai.org/">Demo</a>, <a href="files/2020_unifiedqa/unifiedqa_tau_talk_split.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
 <li><p><b>Evaluating NLP Models via Contrast Sets</b> <br /> 
 with Matt Gardner and others <br /> 
-arXiv, 2020 <br /> 
+EMNLP - Findings, 2020 <br /> 
 <a href="https://arxiv.org/abs/2004.02709">Paper</a>, <a href="https://allennlp.org/contrast-sets">Data</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Natural Perturbation for Robust Question Answering</b> <br /> 
+with Tushar Khot and Ashish Sabharwal <br /> 
+EMNLP, 2020 <br /> 
+<a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -346,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-03 18:16:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-09-15 15:02:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
