--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ arXiv, 2020 <br />
 </li>
 </ul>
 <ul>
-<li><p><b><i>UNQOVER</i>ing Stereotypical Biases via Underspecified Questions</b> <br /> 
+<li><p><b>UNQOVERing Stereotypical Biases via Underspecified Questions</b> <br /> 
 with Tao Li and others <br /> 
 EMNLP - Findings, 2020 <br /> 
 <a href="?">Paper</a></p>
@@ -76,14 +76,14 @@ EMNLP - Findings, 2020 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Evaluating NLP Models via Contrast Sets</b> <br /> 
+<li><p><b>Evaluating Models&rsquo; Local Decision Boundaries via Contrast Sets</b> <br /> 
 with Matt Gardner and others <br /> 
 EMNLP - Findings, 2020 <br /> 
 <a href="https://arxiv.org/abs/2004.02709">Paper</a>, <a href="https://allennlp.org/contrast-sets">Data</a></p>
 </li>
 </ul>
 <ul>
-<li><p><b>Natural Perturbation for Robust Question Answering</b> <br /> 
+<li><p><b>More Bang for Your Buck: Natural Perturbation for Robust Question Answering</b> <br /> 
 with Tushar Khot and Ashish Sabharwal <br /> 
 EMNLP, 2020 <br /> 
 <a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a></p>
@@ -353,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-15 15:02:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-09-15 21:01:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
