--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ arXiv, 2020 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>UNQOVERing Stereotypical Biases via Underspecified Questions</b> <br /> 
+<li><p><b>UnQovering Stereotypical Biases via Underspecified Questions</b> <br /> 
 with Tao Li and others <br /> 
 EMNLP - Findings, 2020 <br /> 
-<a href="?">Paper</a></p>
+<a href="https://arxiv.org/abs/2010.02428">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -353,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-15 21:01:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-07 00:01:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
