--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ arXiv, 2020 <br />
 <li><p><b>UnQovering Stereotypical Biases via Underspecified Questions</b> <br /> 
 with Tao Li and others <br /> 
 EMNLP - Findings, 2020 <br /> 
-<a href="https://arxiv.org/abs/2010.02428">Paper</a></p>
+<a href="https://arxiv.org/abs/2010.02428">Paper</a>, <a href="https://github.com/allenai/unqover">Code</a>, <a href="https://unqover.apps.allenai.org/">Demo</a></p>
 </li>
 </ul>
 <ul>
@@ -353,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-09 20:53:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-20 15:56:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
