--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <ul>
 <li><p>OpenEval, an open-source evaluation framework for AI applications, UIUC (2015-2016), <a href="files/2015_openeval/openeval_poster.pdf">Poster</a></p>
 </li>
-<li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, <a href="http://www.cis.upenn.edu/~danielkh/files/2015_knowledge_representation/2015_knowledge_representation2.pptx">PPTX</a> <a href="http://www.cis.upenn.edu/~danielkh/files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> 2015 </p>
+<li><p><a href="files/2015_knowledge_representation/knowledge_representation_writeup.pdf">Knowledge Representation: How far we have come?</a>, <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pptx">PPTX</a> <a href="files/2015_knowledge_representation/2015_knowledge_representation2.pdf">PDF</a> 2015 </p>
 </li>
 <li><p>Modelling and Control of Ball-on-Plate System, 2011, ( <a href="BallOnPlateControl.html">ProjectPage, documentation and sources</a>)</p>
 </li>
@@ -353,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-26 21:36:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-26 21:37:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
