--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ EMNLP - Findings, 2020 <br />
 <li><p><b>More Bang for Your Buck: Natural Perturbation for Robust Question Answering</b> <br /> 
 with Tushar Khot and Ashish Sabharwal <br /> 
 EMNLP, 2020 <br /> 
-<a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a>, <a href="files/2020_natural_peturbations/boolq'_emnlp2020.pdf">Slides</a>, <a href="?">Talk</a></p>
+<a href="https://arxiv.org/abs/2004.04849">Paper</a>, <a href="https://github.com/allenai/natural-perturbations">Data</a>, <a href="files/2020_natural_peturbations/boolq'_emnlp2020.pdf">Slides</a>, <a href="https://www.youtube.com/watch?v=wIU-9Ho8nZo">Talk</a></p>
 </li>
 </ul>
 <ul>
@@ -353,7 +353,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-26 21:37:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-10-27 20:17:51 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
