--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <div class="blockcontent">
 <p>We must actively rethink the evaluation of AI systems and  move the goalposts according to the latest developments. I persistently pursue this perspective in order to build more comprehensive challenges for our latest technology. 
 Instances of such vision are embodied in the design of our challenge datasets for language understanding (<a href="https://www.aclweb.org/anthology/N18-1023/">NAACL 18</a>, <a href="https://arxiv.org/abs/1909.03065">EMNLP 19</a>, <a href="https://arxiv.org/abs/2101.02235">TACL 21</a>). 
-Along the same goal, we recently released <a href="?">GENIE🧞</a>, a human evaluation platform to fasciliatet comprehensive evaluation of text generation tasks. </p>
+Along the same goal, we recently released <a href="https://arxiv.org/abs/2101.06561">GENIE🧞</a>, a human evaluation platform to fasciliatet comprehensive evaluation of text generation tasks. </p>
 </div></div>
 <div class="infoblock">
 <div class="blocktitle">Are system doing what they are supposed to do?</div>
@@ -88,7 +88,7 @@ These include, but are not limited to, algorithmic biases, misinformation, echo 
 <li><p><b>GENIE: Leaderboard for Human-in-the-Loop Evaluation of Text Generation</b> <br /> 
 with Gabriel Stanovsky, Jonathan Bragg, Nick Lourie, Jungo Kasai and others <br /> 
 arXiv, 2021 <br /> 
-<a href="?">Paper</a>, <a href="https://genie.apps.allenai.org/">Website</a></p>
+<a href="https://arxiv.org/abs/2101.06561">Paper</a>, <a href="https://genie.apps.allenai.org/">Website</a></p>
 </li>
 </ul>
 <ul>
@@ -404,7 +404,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-16 23:51:54 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-18 18:06:50 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
