--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ arXiv, 2021 <br />
 <li><p><b>Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies</b> <br /> 
 with Mor Geva and others <br /> 
 TACL, 2021 <br /> 
-<a href="https://arxiv.org/abs/2101.02235">Paper</a>, <a href="https://allenai.org/data/strategyqa">Dataset</a></p>
+<a href="https://arxiv.org/abs/2101.02235">Paper</a>, <a href="https://allenai.org/data/strategyqa">Dataset</a>, <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">Leaderboard</a></p>
 </li>
 </ul>
 <ul>
@@ -414,7 +414,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-08 22:10:35 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-02-18 13:26:11 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
