--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ This is an enormous challenge which requires the participation of policy-makers,
 <li><p>How can AI benefit the common good?
 Whether we like it or not, technology will play an increasing role in our daily lives. 
 I tend to worry about the unintended consequences of technology in all areas of our lives. 
-These include, but are not limited to, algorithmic biases, misinformation, echo chambers and growing social division. 
+These include, but are not limited to, algorithmic biases, misinformation, echo chambers and our growing socio-political divisions. 
 <br />
 As a believer in technology, I like to see applications of AI that address the potential damages of new technologies. An instance of such mindset was embodied in our project that explored ways to organize ideas about controversial issues in ways that allows people to see alternative views and help them see alternative views to a discussion (<a href="http://danielkhashabi.com/files/2019_perspectrum/2019_perspectrum_naacl.pdf">NAACL 19</a>).  </p>
 </li>
@@ -341,6 +341,8 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 </ul>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
+<li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.</p>
+</li>
 <li><p><a href="https://freuder.wordpress.com/pthg-19-the-third-workshop-on-progress-towards-the-holy-grail/">The Third Workshop on Progress Towards the Holy Grail</a>, <a href="files/2019_talk_holy_grail_workshop/daniel-kh-holy-grail-workshop-2019.pdf">In Pursuit of the Holy Grail of Natural Language Understanding: Past, Present, and Future</a>, 2019.</p>
 </li>
 <li><p>Carnegie Mellon University, <a href="files/2019_talk_indirect_supervision/danielkh_job_talk_small_supervision_split.pdf">Natural Language Understanding with Indirect Supervision</a>, 2019. </p>
@@ -414,7 +416,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-18 13:26:11 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-05 14:11:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
