--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@ Just a few years ago, the Aristo project <a href="https://arxiv.org/abs/1909.019
 <p><b>Disclaimer:</b> This material is presented to ensure timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
+with Tushar Khot and others <br /> 
+NAACL-HLT, 2021 <br /> 
+<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa-demo.apps.allenai.org/">Demo</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Think you have Solved Direct-Answer Question Answering? Try ARC-DA, the Direct-Answer AI2 Reasoning Challenge</b> <br /> 
 with Sumithra Bhakthavatsalam, Oyvind Tafjord, Peter Clark and others <br /> 
 arXiv, 2021 <br /> 
@@ -105,7 +112,7 @@ arXiv, 2021 <br />
 <li><p><b>Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies</b> <br /> 
 with Mor Geva and others <br /> 
 TACL, 2021 <br /> 
-<a href="https://arxiv.org/abs/2101.02235">Paper</a>, <a href="https://allenai.org/data/strategyqa">Dataset</a>, <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">Leaderboard</a></p>
+<a href="https://arxiv.org/abs/2101.02235">Paper</a>, <a href="https://allenai.org/data/strategyqa">Dataset</a>, <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">Leaderboard</a>, <a href="https://docs.google.com/presentation/d/1lm4S7YE1RHG4ZtMMXWkPUKVcqKI-z0aDAbAHSh16KNQ/edit?usp=sharing">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -113,13 +120,6 @@ TACL, 2021 <br />
 with Arman Cohan, Siamak Shakeri and others <br /> 
 arXiv, 2020 <br /> 
 <a href="https://arxiv.org/abs/2012.06154">Paper</a>, <a href="https://github.com/persiannlp/parsiglue/">Code &amp; Data</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</b> <br /> 
-with Tushar Khot and others <br /> 
-arXiv, 2020 <br /> 
-<a href="https://arxiv.org/abs/2009.00751">Paper</a>, <a href="https://github.com/allenai/modularqa">Resources</a>, <a href="https://modularqa-demo.apps.allenai.org/">Demo</a></p>
 </li>
 </ul>
 <ul>
@@ -416,7 +416,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-05 14:11:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-17 21:39:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
